syntax = "proto3";
package main_api;
option go_package = ".;main_api";
import "google/api/annotations.proto";

service MainApi {
  rpc GetSample (SampleRequest) returns (SampleResponse) {
    option (google.api.http) = {
      get: "/sample"
    };
  }
}

message SampleRequest {
  string system_code = 1;
}

message SampleResponse {
  string name = 1;
  string email = 2;
}
